--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,91 +34,128 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/c5"
+        android:id="@+id/b_00"
+        android:textColor="@color/black"
         android:layout_width="120dp"
         android:layout_height="120dp"
+        android:layout_above="@+id/b_10"
+        android:layout_centerInParent="true"
+        android:layout_toLeftOf="@+id/b_01"
+        android:background="@drawable/cuadro"
+        android:textAlignment="center"
+        android:text=""
+        app:backgroundTint="@null"></Button>
+
+    <Button
+        android:id="@+id/b_01"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_above="@+id/b_11"
+        android:text=""
+        android:textColor="@color/black"
+
+        android:textAlignment="center"
         android:layout_centerInParent="true"
         android:background="@drawable/cuadro"
         app:backgroundTint="@null"></Button>
 
     <Button
-        android:id="@+id/c6"
+        android:id="@+id/b_02"
+        android:textAlignment="center"
         android:layout_width="120dp"
         android:layout_height="120dp"
+        android:textColor="@color/black"
+
+        android:layout_above="@+id/b_12"
         android:layout_centerInParent="true"
-        android:layout_toRightOf="@id/c5"
+        android:text=""
+        android:layout_toRightOf="@id/b_01"
         android:background="@drawable/cuadro"
         app:backgroundTint="@null"></Button>
 
     <Button
-        android:id="@+id/c4"
+        android:textAlignment="center"
+        android:id="@+id/b_10"
+        android:textColor="@color/black"
+
         android:layout_width="120dp"
+        android:text=""
         android:layout_height="120dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@id/c5"
+        android:layout_toLeftOf="@id/b_11"
         app:backgroundTint="@null"
         android:background="@drawable/cuadro"
         >
     </Button>
 
     <Button
-        android:id="@+id/c1"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_above="@+id/c6"
-        android:layout_centerInParent="true"
-        android:layout_toLeftOf="@+id/c2"
-        android:background="@drawable/cuadro"
-        app:backgroundTint="@null"></Button>
+        android:id="@+id/b_11"
+        android:textColor="@color/black"
 
-    <Button
-        android:id="@+id/c2"
         android:layout_width="120dp"
+        android:textAlignment="center"
+        android:text=""
         android:layout_height="120dp"
-        android:layout_above="@+id/c5"
         android:layout_centerInParent="true"
         android:background="@drawable/cuadro"
         app:backgroundTint="@null"></Button>
 
     <Button
-        android:id="@+id/c3"
+        android:id="@+id/b_12"
         android:layout_width="120dp"
+        android:textAlignment="center"
+        android:text=""
+        android:textColor="@color/black"
+
         android:layout_height="120dp"
-        android:layout_above="@+id/c6"
         android:layout_centerInParent="true"
-        android:layout_toRightOf="@id/c2"
+        android:layout_toRightOf="@id/b_11"
         android:background="@drawable/cuadro"
         app:backgroundTint="@null"></Button>
 
     <Button
-        android:id="@+id/c7"
+        android:id="@+id/b_20"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_below="@+id/c4"
+        android:textAlignment="center"
+        android:text=""
+        android:textColor="@color/black"
+
+        android:layout_below="@+id/b_10"
         android:layout_centerInParent="true"
-        android:layout_toLeftOf="@+id/c8"
+        android:layout_toLeftOf="@+id/b_21"
         android:background="@drawable/cuadro"
         app:backgroundTint="@null"></Button>
 
     <Button
-        android:id="@+id/c8"
+        android:id="@+id/b_21"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_below="@+id/c5"
+        android:text=""
+        android:textColor="@color/black"
+
+        android:textAlignment="center"
+        android:layout_below="@+id/b_11"
         android:layout_centerInParent="true"
         android:background="@drawable/cuadro"
         app:backgroundTint="@null"></Button>
 
     <Button
-        android:id="@+id/c9"
+        android:id="@+id/b_22"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_below="@+id/c6"
+        android:layout_below="@+id/b_12"
         android:layout_centerInParent="true"
-        android:layout_toRightOf="@id/c8"
+        android:layout_toRightOf="@id/b_21"
         android:background="@drawable/cuadro"
+        android:text=""
+        android:textColor="@color/black"
+
+        android:textAlignment="center"
         app:backgroundTint="@null"></Button>
+
+
 
 
 </RelativeLayout>
