--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -9,13 +9,13 @@
 
 
     <TextView
-        android:id="@+id/jugador1"
+        android:id="@+id/j1"
         android:layout_width="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="Jugador 1: "
+        android:text="Jugador 1: 0"
         android:layout_marginBottom="20dp"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -23,17 +23,56 @@
     </TextView>
 
     <TextView
-        android:id="@+id/jugador2"
+      android:id="@+id/j2"
         android:textColor="@color/black"
         android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@+id/j1"
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/jugador1"
-        android:text="Jugador 2: "
+        android:text="Jugador 2: 0"
         >
 
     </TextView>
+
+    <Button
+        android:id="@+id/botonreiniciar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reiniciar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="190dp"
+
+        ></Button>
+
+    <Button
+        android:id="@+id/btnregresar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Regresar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/botonreiniciar"
+
+
+        ></Button>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        app:layout_constraintTop_toBottomOf="@+id/btnregresar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        android:textSize="20dp"
+        android:textColor="@color/black"
+        android:textAlignment="center"
+        android:id="@+id/contrein"
+        ></TextView>
 </androidx.constraintlayout.widget.ConstraintLayout>
